exercice-cv avec media

--- a/exercice.html
+++ b/exercice.html
@@ -68,7 +68,7 @@
             <section id="mes-formations">
 
                   <div class="titre1">
-                        <h1>Mes formation</h1>
+                        <h1>Mes formations</h1>
                    </div>
                
                    <div class="diplome">
@@ -110,8 +110,8 @@
 
         <footer>
             <div id="titres">
-                <h4><a href="https://konexio.eu" title="Mon blog tech" target="_blank">mon bloc tech</a></h4>
-                <h4><a href="https://konexio.eu" title="mon blog voyage" target="_blank">mon bloc voyage</a></h4>
+                <h4><a href="https://konexio.eu" title="Mon blog tech" target="_blank">Mon bloc tech</a></h4>
+                <h4><a href="https://konexio.eu" title="mon blog voyage" target="_blank">Mon bloc voyage</a></h4>
             </div>
             
 
